homepage link change

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mern-auth-wheat.vercel.app",
+  "homepage": "https://mern-auth-eight.vercel.app",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
