--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node server.js",
-    "start": "node server.js"
+    "dev": "set NODE_ENV=production && node server.js",
+    "start": "set NODE_ENV=production && node server.js"
   },
   "keywords": [],
   "author": "",
